// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClineProvider state builders (CORE-R1 characterization) > with a fully populated ContextProxy > getState() matches the golden snapshot 1`] = `
{
  "allowedCommands": [
    "git status",
  ],
  "allowedMaxCost": 3.5,
  "allowedMaxRequests": 42,
  "alwaysAllowExecute": true,
  "alwaysAllowFollowupQuestions": true,
  "alwaysAllowMcp": true,
  "alwaysAllowModeSwitch": true,
  "alwaysAllowReadOnly": true,
  "alwaysAllowReadOnlyOutsideWorkspace": true,
  "alwaysAllowSubtasks": true,
  "alwaysAllowWrite": true,
  "alwaysAllowWriteOutsideWorkspace": true,
  "alwaysAllowWriteProtected": true,
  "alwaysApprovePlan": true,
  "apiConfiguration": {
    "apiModelId": "model-under-test",
    "apiProvider": "openrouter",
    "openRouterModelId": "openrouter/model",
  },
  "apiModelId": "model-under-test",
  "autoApprovalEnabled": true,
  "autoApprovalMode": "bypass",
  "autoCondenseContext": false,
  "autoCondenseContextApiConfigId": "cfg-condense",
  "autoCondenseContextPercent": 75,
  "checkpointTimeout": 30,
  "cloudIsAuthenticated": true,
  "cloudUserInfo": {
    "email": "ada@example.com",
    "name": "Ada",
  },
  "codebaseIndexConfig": {
    "codebaseIndexBedrockProfile": "profile",
    "codebaseIndexBedrockRegion": "eu-west-1",
    "codebaseIndexEmbedderBaseUrl": "http://ollama.local:11434",
    "codebaseIndexEmbedderModelDimension": 768,
    "codebaseIndexEmbedderModelId": "nomic-embed-text",
    "codebaseIndexEmbedderProvider": "ollama",
    "codebaseIndexEnabled": true,
    "codebaseIndexOpenAiCompatibleBaseUrl": "http://compat.local/v1",
    "codebaseIndexOpenRouterSpecificProvider": "provider",
    "codebaseIndexQdrantUrl": "http://qdrant.local:6333",
    "codebaseIndexSearchMaxResults": 20,
    "codebaseIndexSearchMinScore": 0.5,
  },
  "codebaseIndexModels": "<EMBEDDING_MODEL_PROFILES>",
  "currentApiConfigName": "work",
  "customCondensingPrompt": "Condense it.",
  "customInstructions": "Be terse.",
  "customModePrompts": {
    "code": {
      "roleDefinition": "Custom role",
    },
  },
  "customModes": [
    {
      "groups": [
        "read",
      ],
      "name": "Reviewer",
      "roleDefinition": "Review",
      "slug": "reviewer",
    },
  ],
  "customSoundCelebration": "celebration.mp3",
  "customSoundCelebrationOriginal": "My Celebration.mp3",
  "customSoundNotification": "notification.mp3",
  "customSoundNotificationOriginal": "My Notification.mp3",
  "customSoundProgressLoop": "progress.mp3",
  "customSoundProgressLoopOriginal": "My Progress.mp3",
  "customSupportPrompts": {
    "ENHANCE": "Enhance this",
  },
  "cwd": "",
  "deniedCommands": [
    "rm -rf",
    "git push --force",
  ],
  "diagnosticsEnabled": false,
  "disabledTools": [
    "codebase_search",
  ],
  "enableCheckpoints": false,
  "enableSubfolderRules": true,
  "enhancementApiConfigId": "cfg-enhance",
  "enterBehavior": "newline",
  "experiments": {
    "customTools": false,
    "deferredTools": false,
    "imageGeneration": false,
    "preventFocusDisruption": true,
    "runSlashCommand": false,
  },
  "followupAutoApproveTimeoutMs": 12000,
  "historyPreviewCollapsed": true,
  "imageGenerationProvider": "openrouter",
  "includeCurrentCost": false,
  "includeCurrentTime": false,
  "includeDiagnosticMessages": false,
  "includeTaskHistoryInEnhance": false,
  "language": "pl",
  "lastShownAnnouncementId": "announcement-1",
  "listApiConfigMeta": [
    {
      "apiProvider": "openrouter",
      "id": "cfg-work",
      "name": "work",
    },
  ],
  "lockApiConfigAcrossModes": true,
  "maxDiagnosticMessages": 10,
  "maxGitStatusFiles": 12,
  "maxImageFileSize": 7,
  "maxInlineToolResultBytes": 8192,
  "maxOpenTabsContext": 5,
  "maxTotalImageSize": 30,
  "maxWorkspaceFiles": 50,
  "mcpEnabled": false,
  "mcpServers": [],
  "memoryWriterApiConfigId": "cfg-memory",
  "mode": "architect",
  "modeApiConfigs": {
    "code": "cfg-work",
  },
  "openRouterImageApiKey": "sk-image",
  "openRouterImageGenerationSelectedModel": "image-model",
  "organizationAllowList": {
    "allowAll": false,
    "providers": {
      "openrouter": {
        "allowAll": true,
      },
    },
  },
  "organizationSettingsVersion": 7,
  "parallelTasksMaxConcurrency": 5,
  "pinnedApiConfigs": {
    "cfg-work": true,
  },
  "profileThresholds": {
    "cfg-work": 60,
  },
  "pruneBeforeCondense": false,
  "pruneToolResultBudget": 2048,
  "publicSharingEnabled": true,
  "reasoningBlockCollapsed": false,
  "searxngBaseUrl": "http://searx.local",
  "sharingEnabled": true,
  "showRooIgnoredFiles": true,
  "soundEnabled": true,
  "soundVolume": 0.8,
  "subagentFollowupTimeoutSec": 60,
  "taskHistory": [],
  "taskSyncEnabled": true,
  "telemetrySetting": "disabled",
  "terminalCommandDelay": 10,
  "terminalPowershellCounter": true,
  "terminalProfile": "bash",
  "terminalShellIntegrationDisabled": false,
  "terminalShellIntegrationTimeout": 9000,
  "terminalZdotdir": true,
  "terminalZshClearEolMark": false,
  "terminalZshOhMy": true,
  "terminalZshP10k": true,
  "webFetchMaxBytes": 50000,
  "webSearchBackend": "searxng",
  "webSearchMaxResults": 7,
  "webToolsEnabled": true,
  "writeDelayMs": 250,
}
`;

exports[`ClineProvider state builders (CORE-R1 characterization) > with a fully populated ContextProxy > getStateToPostToWebview() matches the golden snapshot 1`] = `
{
  "allowedCommands": [
    "git status",
  ],
  "allowedMaxCost": 3.5,
  "allowedMaxRequests": 42,
  "alwaysAllowExecute": true,
  "alwaysAllowFollowupQuestions": true,
  "alwaysAllowMcp": true,
  "alwaysAllowModeSwitch": true,
  "alwaysAllowReadOnly": true,
  "alwaysAllowReadOnlyOutsideWorkspace": true,
  "alwaysAllowSubtasks": true,
  "alwaysAllowWrite": true,
  "alwaysAllowWriteOutsideWorkspace": true,
  "alwaysAllowWriteProtected": true,
  "alwaysApprovePlan": true,
  "apiConfiguration": {
    "apiModelId": "model-under-test",
    "apiProvider": "openrouter",
    "openRouterModelId": "openrouter/model",
  },
  "autoApprovalEnabled": true,
  "autoApprovalMode": "bypass",
  "autoCondenseContext": false,
  "autoCondenseContextApiConfigId": "cfg-condense",
  "autoCondenseContextPercent": 75,
  "checkpointTimeout": 30,
  "clineMessages": [],
  "clineMessagesSeq": 1,
  "cloudApiUrl": "http://localhost:8080",
  "cloudAuthSkipModel": false,
  "cloudIsAuthenticated": true,
  "cloudOrganizations": [
    {
      "organization": {
        "id": "org-1",
        "name": "Org",
      },
      "role": "member",
    },
  ],
  "cloudUserInfo": {
    "email": "ada@example.com",
    "name": "Ada",
  },
  "codebaseIndexConfig": {
    "codebaseIndexBedrockProfile": "profile",
    "codebaseIndexBedrockRegion": "eu-west-1",
    "codebaseIndexEmbedderBaseUrl": "http://ollama.local:11434",
    "codebaseIndexEmbedderModelDimension": 768,
    "codebaseIndexEmbedderModelId": "nomic-embed-text",
    "codebaseIndexEmbedderProvider": "ollama",
    "codebaseIndexEnabled": true,
    "codebaseIndexOpenAiCompatibleBaseUrl": "http://compat.local/v1",
    "codebaseIndexOpenRouterSpecificProvider": "provider",
    "codebaseIndexQdrantUrl": "http://qdrant.local:6333",
    "codebaseIndexSearchMaxResults": 20,
    "codebaseIndexSearchMinScore": 0.5,
  },
  "codebaseIndexModels": "<EMBEDDING_MODEL_PROFILES>",
  "currentApiConfigName": "work",
  "currentTaskId": undefined,
  "currentTaskItem": undefined,
  "currentTaskTodos": [],
  "customCondensingPrompt": "Condense it.",
  "customInstructions": "Be terse.",
  "customModePrompts": {
    "code": {
      "roleDefinition": "Custom role",
    },
  },
  "customModes": [
    {
      "groups": [
        "read",
      ],
      "name": "Reviewer",
      "roleDefinition": "Review",
      "slug": "reviewer",
    },
  ],
  "customSoundCelebration": "celebration.mp3",
  "customSoundCelebrationOriginal": "My Celebration.mp3",
  "customSoundNotification": "notification.mp3",
  "customSoundNotificationOriginal": "My Notification.mp3",
  "customSoundProgressLoop": "progress.mp3",
  "customSoundProgressLoopOriginal": "My Progress.mp3",
  "customSoundUris": {},
  "customSupportPrompts": {
    "ENHANCE": "Enhance this",
  },
  "cwd": "",
  "debug": true,
  "deniedCommands": [
    "rm -rf",
    "git push --force",
  ],
  "disabledTools": [
    "codebase_search",
  ],
  "enableCheckpoints": false,
  "enableSubfolderRules": true,
  "enhancementApiConfigId": "cfg-enhance",
  "enterBehavior": "newline",
  "experiments": {
    "customTools": false,
    "deferredTools": false,
    "imageGeneration": false,
    "preventFocusDisruption": true,
    "runSlashCommand": false,
  },
  "followupAutoApproveTimeoutMs": 12000,
  "hasOpenedModeSelector": false,
  "historyPreviewCollapsed": true,
  "imageGenerationProvider": "openrouter",
  "includeCurrentCost": false,
  "includeCurrentTime": false,
  "includeDiagnosticMessages": false,
  "includeTaskHistoryInEnhance": false,
  "language": "pl",
  "listApiConfigMeta": [
    {
      "apiProvider": "openrouter",
      "id": "cfg-work",
      "name": "work",
    },
  ],
  "lockApiConfigAcrossModes": true,
  "machineId": "test-machine-id",
  "maxDiagnosticMessages": 10,
  "maxGitStatusFiles": 12,
  "maxImageFileSize": 7,
  "maxInlineToolResultBytes": 8192,
  "maxOpenTabsContext": 5,
  "maxTotalImageSize": 30,
  "maxWorkspaceFiles": 50,
  "mcpEnabled": false,
  "mcpServers": [],
  "mdmCompliant": undefined,
  "memoryActivity": {
    "recall": 0,
    "write": 0,
  },
  "memoryWriterApiConfigId": "cfg-memory",
  "messageQueue": undefined,
  "mode": "architect",
  "openAiCodexIsAuthenticated": false,
  "openRouterImageApiKey": "sk-image",
  "openRouterImageGenerationSelectedModel": "image-model",
  "organizationAllowList": {
    "allowAll": false,
    "providers": {
      "openrouter": {
        "allowAll": true,
      },
    },
  },
  "organizationSettingsVersion": 7,
  "parallelTasksMaxConcurrency": 5,
  "pinnedApiConfigs": {
    "cfg-work": true,
  },
  "profileThresholds": {
    "cfg-work": 60,
  },
  "pruneBeforeCondense": false,
  "pruneToolResultBudget": 2048,
  "publicSharingEnabled": true,
  "reasoningBlockCollapsed": false,
  "renderContext": "sidebar",
  "searxngBaseUrl": "http://searx.local",
  "settingsImportedAt": undefined,
  "sharingEnabled": true,
  "shouldShowAnnouncement": true,
  "showRooIgnoredFiles": true,
  "soundEnabled": true,
  "soundVolume": 0.8,
  "storageErrorMessage": "",
  "subagentFollowupTimeoutSec": 60,
  "subagents": [],
  "taskHistory": [],
  "taskSyncEnabled": true,
  "telemetryKey": undefined,
  "telemetrySetting": "disabled",
  "terminalCommandDelay": 10,
  "terminalPowershellCounter": true,
  "terminalProfile": "bash",
  "terminalShellIntegrationDisabled": false,
  "terminalShellIntegrationTimeout": 9000,
  "terminalZdotdir": true,
  "terminalZshClearEolMark": false,
  "terminalZshOhMy": true,
  "terminalZshP10k": true,
  "uriScheme": "vscode",
  "version": "1.0.0",
  "webFetchMaxBytes": 50000,
  "webSearchBackend": "searxng",
  "webSearchMaxResults": 7,
  "webToolsEnabled": true,
  "writeDelayMs": 250,
}
`;

exports[`ClineProvider state builders (CORE-R1 characterization) > with a missing CloudService > getState() matches the golden snapshot 1`] = `
{
  "allowedCommands": [],
  "allowedMaxCost": undefined,
  "allowedMaxRequests": undefined,
  "alwaysAllowExecute": false,
  "alwaysAllowFollowupQuestions": false,
  "alwaysAllowMcp": false,
  "alwaysAllowModeSwitch": false,
  "alwaysAllowReadOnly": false,
  "alwaysAllowReadOnlyOutsideWorkspace": false,
  "alwaysAllowSubtasks": false,
  "alwaysAllowWrite": false,
  "alwaysAllowWriteOutsideWorkspace": false,
  "alwaysAllowWriteProtected": false,
  "alwaysApprovePlan": false,
  "apiConfiguration": {
    "apiProvider": "anthropic",
  },
  "apiModelId": undefined,
  "autoApprovalEnabled": false,
  "autoApprovalMode": "default",
  "autoCondenseContext": true,
  "autoCondenseContextApiConfigId": undefined,
  "autoCondenseContextPercent": 100,
  "checkpointTimeout": 15,
  "cloudIsAuthenticated": false,
  "cloudUserInfo": null,
  "codebaseIndexConfig": {
    "codebaseIndexBedrockProfile": undefined,
    "codebaseIndexBedrockRegion": undefined,
    "codebaseIndexEmbedderBaseUrl": "",
    "codebaseIndexEmbedderModelDimension": undefined,
    "codebaseIndexEmbedderModelId": "",
    "codebaseIndexEmbedderProvider": "openai",
    "codebaseIndexEnabled": false,
    "codebaseIndexOpenAiCompatibleBaseUrl": undefined,
    "codebaseIndexOpenRouterSpecificProvider": undefined,
    "codebaseIndexQdrantUrl": "http://localhost:6333",
    "codebaseIndexSearchMaxResults": undefined,
    "codebaseIndexSearchMinScore": undefined,
  },
  "codebaseIndexModels": "<EMBEDDING_MODEL_PROFILES>",
  "currentApiConfigName": "default",
  "customCondensingPrompt": undefined,
  "customInstructions": undefined,
  "customModePrompts": {},
  "customModes": [],
  "customSoundCelebration": null,
  "customSoundCelebrationOriginal": null,
  "customSoundNotification": null,
  "customSoundNotificationOriginal": null,
  "customSoundProgressLoop": null,
  "customSoundProgressLoopOriginal": null,
  "customSupportPrompts": {},
  "cwd": "",
  "deniedCommands": [],
  "diagnosticsEnabled": true,
  "disabledTools": undefined,
  "enableCheckpoints": true,
  "enableSubfolderRules": false,
  "enhancementApiConfigId": undefined,
  "enterBehavior": "send",
  "experiments": "<experimentDefault>",
  "followupAutoApproveTimeoutMs": 60000,
  "historyPreviewCollapsed": false,
  "imageGenerationProvider": undefined,
  "includeCurrentCost": true,
  "includeCurrentTime": true,
  "includeDiagnosticMessages": true,
  "includeTaskHistoryInEnhance": true,
  "language": "en",
  "lastShownAnnouncementId": undefined,
  "listApiConfigMeta": [],
  "lockApiConfigAcrossModes": false,
  "maxDiagnosticMessages": 50,
  "maxGitStatusFiles": 0,
  "maxImageFileSize": 5,
  "maxInlineToolResultBytes": 24576,
  "maxOpenTabsContext": 20,
  "maxTotalImageSize": 20,
  "maxWorkspaceFiles": 200,
  "mcpEnabled": true,
  "mcpServers": [],
  "memoryWriterApiConfigId": undefined,
  "mode": "architect",
  "modeApiConfigs": {},
  "openRouterImageApiKey": undefined,
  "openRouterImageGenerationSelectedModel": undefined,
  "organizationAllowList": {
    "allowAll": true,
    "providers": {},
  },
  "organizationSettingsVersion": -1,
  "parallelTasksMaxConcurrency": 3,
  "pinnedApiConfigs": {},
  "profileThresholds": {},
  "pruneBeforeCondense": true,
  "pruneToolResultBudget": 4096,
  "publicSharingEnabled": false,
  "reasoningBlockCollapsed": true,
  "searxngBaseUrl": "",
  "sharingEnabled": false,
  "showRooIgnoredFiles": false,
  "soundEnabled": false,
  "soundVolume": 0.5,
  "subagentFollowupTimeoutSec": 300,
  "taskHistory": [],
  "taskSyncEnabled": false,
  "telemetrySetting": "unset",
  "terminalCommandDelay": 0,
  "terminalPowershellCounter": false,
  "terminalProfile": undefined,
  "terminalShellIntegrationDisabled": true,
  "terminalShellIntegrationTimeout": 30000,
  "terminalZdotdir": false,
  "terminalZshClearEolMark": true,
  "terminalZshOhMy": false,
  "terminalZshP10k": false,
  "webFetchMaxBytes": 51200,
  "webSearchBackend": "searxng",
  "webSearchMaxResults": 5,
  "webToolsEnabled": false,
  "writeDelayMs": 1000,
}
`;

exports[`ClineProvider state builders (CORE-R1 characterization) > with a missing CloudService > getStateToPostToWebview() matches the golden snapshot 1`] = `
{
  "allowedCommands": [],
  "allowedMaxCost": undefined,
  "allowedMaxRequests": undefined,
  "alwaysAllowExecute": false,
  "alwaysAllowFollowupQuestions": false,
  "alwaysAllowMcp": false,
  "alwaysAllowModeSwitch": false,
  "alwaysAllowReadOnly": false,
  "alwaysAllowReadOnlyOutsideWorkspace": false,
  "alwaysAllowSubtasks": false,
  "alwaysAllowWrite": false,
  "alwaysAllowWriteOutsideWorkspace": false,
  "alwaysAllowWriteProtected": false,
  "alwaysApprovePlan": false,
  "apiConfiguration": {
    "apiProvider": "anthropic",
  },
  "autoApprovalEnabled": false,
  "autoApprovalMode": "default",
  "autoCondenseContext": true,
  "autoCondenseContextApiConfigId": undefined,
  "autoCondenseContextPercent": 100,
  "checkpointTimeout": 15,
  "clineMessages": [],
  "clineMessagesSeq": 1,
  "cloudApiUrl": "http://localhost:8080",
  "cloudAuthSkipModel": false,
  "cloudIsAuthenticated": false,
  "cloudOrganizations": [],
  "cloudUserInfo": null,
  "codebaseIndexConfig": {
    "codebaseIndexBedrockProfile": undefined,
    "codebaseIndexBedrockRegion": undefined,
    "codebaseIndexEmbedderBaseUrl": "",
    "codebaseIndexEmbedderModelDimension": undefined,
    "codebaseIndexEmbedderModelId": "",
    "codebaseIndexEmbedderProvider": "openai",
    "codebaseIndexEnabled": false,
    "codebaseIndexOpenAiCompatibleBaseUrl": undefined,
    "codebaseIndexOpenRouterSpecificProvider": undefined,
    "codebaseIndexQdrantUrl": "http://localhost:6333",
    "codebaseIndexSearchMaxResults": undefined,
    "codebaseIndexSearchMinScore": undefined,
  },
  "codebaseIndexModels": "<EMBEDDING_MODEL_PROFILES>",
  "currentApiConfigName": "default",
  "currentTaskId": undefined,
  "currentTaskItem": undefined,
  "currentTaskTodos": [],
  "customCondensingPrompt": undefined,
  "customInstructions": undefined,
  "customModePrompts": {},
  "customModes": [],
  "customSoundCelebration": null,
  "customSoundCelebrationOriginal": null,
  "customSoundNotification": null,
  "customSoundNotificationOriginal": null,
  "customSoundProgressLoop": null,
  "customSoundProgressLoopOriginal": null,
  "customSoundUris": {},
  "customSupportPrompts": {},
  "cwd": "",
  "debug": false,
  "deniedCommands": [],
  "disabledTools": undefined,
  "enableCheckpoints": true,
  "enableSubfolderRules": false,
  "enhancementApiConfigId": undefined,
  "enterBehavior": "send",
  "experiments": "<experimentDefault>",
  "followupAutoApproveTimeoutMs": 60000,
  "hasOpenedModeSelector": false,
  "historyPreviewCollapsed": false,
  "imageGenerationProvider": undefined,
  "includeCurrentCost": true,
  "includeCurrentTime": true,
  "includeDiagnosticMessages": true,
  "includeTaskHistoryInEnhance": true,
  "language": "en",
  "listApiConfigMeta": [],
  "lockApiConfigAcrossModes": false,
  "machineId": "test-machine-id",
  "maxDiagnosticMessages": 50,
  "maxGitStatusFiles": 0,
  "maxImageFileSize": 5,
  "maxInlineToolResultBytes": 24576,
  "maxOpenTabsContext": 20,
  "maxTotalImageSize": 20,
  "maxWorkspaceFiles": 200,
  "mcpEnabled": true,
  "mcpServers": [],
  "mdmCompliant": undefined,
  "memoryActivity": {
    "recall": 0,
    "write": 0,
  },
  "memoryWriterApiConfigId": undefined,
  "messageQueue": undefined,
  "mode": "architect",
  "openAiCodexIsAuthenticated": false,
  "openRouterImageApiKey": undefined,
  "openRouterImageGenerationSelectedModel": undefined,
  "organizationAllowList": {
    "allowAll": true,
    "providers": {},
  },
  "organizationSettingsVersion": -1,
  "parallelTasksMaxConcurrency": 3,
  "pinnedApiConfigs": {},
  "profileThresholds": {},
  "pruneBeforeCondense": true,
  "pruneToolResultBudget": 4096,
  "publicSharingEnabled": false,
  "reasoningBlockCollapsed": true,
  "renderContext": "sidebar",
  "searxngBaseUrl": "",
  "settingsImportedAt": undefined,
  "sharingEnabled": false,
  "shouldShowAnnouncement": false,
  "showRooIgnoredFiles": false,
  "soundEnabled": false,
  "soundVolume": 0.5,
  "storageErrorMessage": "",
  "subagentFollowupTimeoutSec": 300,
  "subagents": [],
  "taskHistory": [],
  "taskSyncEnabled": false,
  "telemetryKey": undefined,
  "telemetrySetting": "unset",
  "terminalCommandDelay": 0,
  "terminalPowershellCounter": false,
  "terminalProfile": undefined,
  "terminalShellIntegrationDisabled": true,
  "terminalShellIntegrationTimeout": 30000,
  "terminalZdotdir": false,
  "terminalZshClearEolMark": true,
  "terminalZshOhMy": false,
  "terminalZshP10k": false,
  "uriScheme": "vscode",
  "version": "1.0.0",
  "webFetchMaxBytes": 51200,
  "webSearchBackend": "searxng",
  "webSearchMaxResults": 5,
  "webToolsEnabled": false,
  "writeDelayMs": 1000,
}
`;

exports[`ClineProvider state builders (CORE-R1 characterization) > with an empty ContextProxy > getState() matches the golden snapshot 1`] = `
{
  "allowedCommands": [],
  "allowedMaxCost": undefined,
  "allowedMaxRequests": undefined,
  "alwaysAllowExecute": false,
  "alwaysAllowFollowupQuestions": false,
  "alwaysAllowMcp": false,
  "alwaysAllowModeSwitch": false,
  "alwaysAllowReadOnly": false,
  "alwaysAllowReadOnlyOutsideWorkspace": false,
  "alwaysAllowSubtasks": false,
  "alwaysAllowWrite": false,
  "alwaysAllowWriteOutsideWorkspace": false,
  "alwaysAllowWriteProtected": false,
  "alwaysApprovePlan": false,
  "apiConfiguration": {
    "apiProvider": "anthropic",
  },
  "apiModelId": undefined,
  "autoApprovalEnabled": false,
  "autoApprovalMode": "default",
  "autoCondenseContext": true,
  "autoCondenseContextApiConfigId": undefined,
  "autoCondenseContextPercent": 100,
  "checkpointTimeout": 15,
  "cloudIsAuthenticated": false,
  "cloudUserInfo": null,
  "codebaseIndexConfig": {
    "codebaseIndexBedrockProfile": undefined,
    "codebaseIndexBedrockRegion": undefined,
    "codebaseIndexEmbedderBaseUrl": "",
    "codebaseIndexEmbedderModelDimension": undefined,
    "codebaseIndexEmbedderModelId": "",
    "codebaseIndexEmbedderProvider": "openai",
    "codebaseIndexEnabled": false,
    "codebaseIndexOpenAiCompatibleBaseUrl": undefined,
    "codebaseIndexOpenRouterSpecificProvider": undefined,
    "codebaseIndexQdrantUrl": "http://localhost:6333",
    "codebaseIndexSearchMaxResults": undefined,
    "codebaseIndexSearchMinScore": undefined,
  },
  "codebaseIndexModels": "<EMBEDDING_MODEL_PROFILES>",
  "currentApiConfigName": "default",
  "customCondensingPrompt": undefined,
  "customInstructions": undefined,
  "customModePrompts": {},
  "customModes": [],
  "customSoundCelebration": null,
  "customSoundCelebrationOriginal": null,
  "customSoundNotification": null,
  "customSoundNotificationOriginal": null,
  "customSoundProgressLoop": null,
  "customSoundProgressLoopOriginal": null,
  "customSupportPrompts": {},
  "cwd": "",
  "deniedCommands": [],
  "diagnosticsEnabled": true,
  "disabledTools": undefined,
  "enableCheckpoints": true,
  "enableSubfolderRules": false,
  "enhancementApiConfigId": undefined,
  "enterBehavior": "send",
  "experiments": "<experimentDefault>",
  "followupAutoApproveTimeoutMs": 60000,
  "historyPreviewCollapsed": false,
  "imageGenerationProvider": undefined,
  "includeCurrentCost": true,
  "includeCurrentTime": true,
  "includeDiagnosticMessages": true,
  "includeTaskHistoryInEnhance": true,
  "language": "en",
  "lastShownAnnouncementId": undefined,
  "listApiConfigMeta": [],
  "lockApiConfigAcrossModes": false,
  "maxDiagnosticMessages": 50,
  "maxGitStatusFiles": 0,
  "maxImageFileSize": 5,
  "maxInlineToolResultBytes": 24576,
  "maxOpenTabsContext": 20,
  "maxTotalImageSize": 20,
  "maxWorkspaceFiles": 200,
  "mcpEnabled": true,
  "mcpServers": [],
  "memoryWriterApiConfigId": undefined,
  "mode": "architect",
  "modeApiConfigs": {},
  "openRouterImageApiKey": undefined,
  "openRouterImageGenerationSelectedModel": undefined,
  "organizationAllowList": "*",
  "organizationSettingsVersion": -1,
  "parallelTasksMaxConcurrency": 3,
  "pinnedApiConfigs": {},
  "profileThresholds": {},
  "pruneBeforeCondense": true,
  "pruneToolResultBudget": 4096,
  "publicSharingEnabled": false,
  "reasoningBlockCollapsed": true,
  "searxngBaseUrl": "",
  "sharingEnabled": false,
  "showRooIgnoredFiles": false,
  "soundEnabled": false,
  "soundVolume": 0.5,
  "subagentFollowupTimeoutSec": 300,
  "taskHistory": [],
  "taskSyncEnabled": false,
  "telemetrySetting": "unset",
  "terminalCommandDelay": 0,
  "terminalPowershellCounter": false,
  "terminalProfile": undefined,
  "terminalShellIntegrationDisabled": true,
  "terminalShellIntegrationTimeout": 30000,
  "terminalZdotdir": false,
  "terminalZshClearEolMark": true,
  "terminalZshOhMy": false,
  "terminalZshP10k": false,
  "webFetchMaxBytes": 51200,
  "webSearchBackend": "searxng",
  "webSearchMaxResults": 5,
  "webToolsEnabled": false,
  "writeDelayMs": 1000,
}
`;

exports[`ClineProvider state builders (CORE-R1 characterization) > with an empty ContextProxy > getStateToPostToWebview() matches the golden snapshot 1`] = `
{
  "allowedCommands": [],
  "allowedMaxCost": undefined,
  "allowedMaxRequests": undefined,
  "alwaysAllowExecute": false,
  "alwaysAllowFollowupQuestions": false,
  "alwaysAllowMcp": false,
  "alwaysAllowModeSwitch": false,
  "alwaysAllowReadOnly": false,
  "alwaysAllowReadOnlyOutsideWorkspace": false,
  "alwaysAllowSubtasks": false,
  "alwaysAllowWrite": false,
  "alwaysAllowWriteOutsideWorkspace": false,
  "alwaysAllowWriteProtected": false,
  "alwaysApprovePlan": false,
  "apiConfiguration": {
    "apiProvider": "anthropic",
  },
  "autoApprovalEnabled": false,
  "autoApprovalMode": "default",
  "autoCondenseContext": true,
  "autoCondenseContextApiConfigId": undefined,
  "autoCondenseContextPercent": 100,
  "checkpointTimeout": 15,
  "clineMessages": [],
  "clineMessagesSeq": 1,
  "cloudApiUrl": "http://localhost:8080",
  "cloudAuthSkipModel": false,
  "cloudIsAuthenticated": false,
  "cloudOrganizations": [],
  "cloudUserInfo": null,
  "codebaseIndexConfig": {
    "codebaseIndexBedrockProfile": undefined,
    "codebaseIndexBedrockRegion": undefined,
    "codebaseIndexEmbedderBaseUrl": "",
    "codebaseIndexEmbedderModelDimension": undefined,
    "codebaseIndexEmbedderModelId": "",
    "codebaseIndexEmbedderProvider": "openai",
    "codebaseIndexEnabled": false,
    "codebaseIndexOpenAiCompatibleBaseUrl": undefined,
    "codebaseIndexOpenRouterSpecificProvider": undefined,
    "codebaseIndexQdrantUrl": "http://localhost:6333",
    "codebaseIndexSearchMaxResults": undefined,
    "codebaseIndexSearchMinScore": undefined,
  },
  "codebaseIndexModels": "<EMBEDDING_MODEL_PROFILES>",
  "currentApiConfigName": "default",
  "currentTaskId": undefined,
  "currentTaskItem": undefined,
  "currentTaskTodos": [],
  "customCondensingPrompt": undefined,
  "customInstructions": undefined,
  "customModePrompts": {},
  "customModes": [],
  "customSoundCelebration": null,
  "customSoundCelebrationOriginal": null,
  "customSoundNotification": null,
  "customSoundNotificationOriginal": null,
  "customSoundProgressLoop": null,
  "customSoundProgressLoopOriginal": null,
  "customSoundUris": {},
  "customSupportPrompts": {},
  "cwd": "",
  "debug": false,
  "deniedCommands": [],
  "disabledTools": undefined,
  "enableCheckpoints": true,
  "enableSubfolderRules": false,
  "enhancementApiConfigId": undefined,
  "enterBehavior": "send",
  "experiments": "<experimentDefault>",
  "followupAutoApproveTimeoutMs": 60000,
  "hasOpenedModeSelector": false,
  "historyPreviewCollapsed": false,
  "imageGenerationProvider": undefined,
  "includeCurrentCost": true,
  "includeCurrentTime": true,
  "includeDiagnosticMessages": true,
  "includeTaskHistoryInEnhance": true,
  "language": "en",
  "listApiConfigMeta": [],
  "lockApiConfigAcrossModes": false,
  "machineId": "test-machine-id",
  "maxDiagnosticMessages": 50,
  "maxGitStatusFiles": 0,
  "maxImageFileSize": 5,
  "maxInlineToolResultBytes": 24576,
  "maxOpenTabsContext": 20,
  "maxTotalImageSize": 20,
  "maxWorkspaceFiles": 200,
  "mcpEnabled": true,
  "mcpServers": [],
  "mdmCompliant": undefined,
  "memoryActivity": {
    "recall": 0,
    "write": 0,
  },
  "memoryWriterApiConfigId": undefined,
  "messageQueue": undefined,
  "mode": "architect",
  "openAiCodexIsAuthenticated": false,
  "openRouterImageApiKey": undefined,
  "openRouterImageGenerationSelectedModel": undefined,
  "organizationAllowList": "*",
  "organizationSettingsVersion": -1,
  "parallelTasksMaxConcurrency": 3,
  "pinnedApiConfigs": {},
  "profileThresholds": {},
  "pruneBeforeCondense": true,
  "pruneToolResultBudget": 4096,
  "publicSharingEnabled": false,
  "reasoningBlockCollapsed": true,
  "renderContext": "sidebar",
  "searxngBaseUrl": "",
  "settingsImportedAt": undefined,
  "sharingEnabled": false,
  "shouldShowAnnouncement": false,
  "showRooIgnoredFiles": false,
  "soundEnabled": false,
  "soundVolume": 0.5,
  "storageErrorMessage": "",
  "subagentFollowupTimeoutSec": 300,
  "subagents": [],
  "taskHistory": [],
  "taskSyncEnabled": false,
  "telemetryKey": undefined,
  "telemetrySetting": "unset",
  "terminalCommandDelay": 0,
  "terminalPowershellCounter": false,
  "terminalProfile": undefined,
  "terminalShellIntegrationDisabled": true,
  "terminalShellIntegrationTimeout": 30000,
  "terminalZdotdir": false,
  "terminalZshClearEolMark": true,
  "terminalZshOhMy": false,
  "terminalZshP10k": false,
  "uriScheme": "vscode",
  "version": "1.0.0",
  "webFetchMaxBytes": 51200,
  "webSearchBackend": "searxng",
  "webSearchMaxResults": 5,
  "webToolsEnabled": false,
  "writeDelayMs": 1000,
}
`;
